# viterbi

./: .gitignore  Cargo.toml  sources.md
examples/: speed_test.rs
src/: common.rs  decode.rs  encode.rs  lib.rs
src/decode/: mod.rs  single_bit_decode.rs  single_bit_rc_decode.rs
