[package]
name = "viterbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7"

[dev-dependencies]
bytes = "1.4"
bytesize = "1.3"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
